misc/docs/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: docs
spec:
  selector:
    app: docs
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
